Updated .env and db.js to establish db connection

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Server
-MONGODB_URI=mongodb+srv://<user>:<pass>@cluster0.mongodb.net/portfolio
+MONGODB_URI="mongodb+srv://johnsonnick9006:Ace_Johnny0690@nickjohnson-portfolio-w.ijoddva.mongodb.net/?retryWrites=true&w=majority&appName=nickjohnson-portfolio-website";
 CONTACT_TO=you@example.com
 SMTP_HOST=smtp.example.com
 SMTP_PORT=465
