--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
-# Server
-MONGODB_URI=mongodb+srv://<user>:<pass>@cluster0.mongodb.net/portfolio
-CONTACT_TO=you@example.com
-SMTP_HOST=smtp.example.com
-SMTP_PORT=465
-SMTP_USER=
-SMTP_PASS=
-# or RESEND_API_KEY=
+# MongoDB
+MONGODB_URI=your_mongodb_connection_string
 
-# Client
-VITE_API_URL=http://localhost:5000
+# Email Configuration (Development - Gmail)
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+EMAIL_FROM=your_email@gmail.com
+EMAIL_TO=your_email@gmail.com
+
+# Email Configuration (Production - SMTP)
+SMTP_HOST=smtp.your-provider.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+
+# Server
+PORT=5000
+NODE_ENV=development
