--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "nodemailer": "^6.9.13"
   },
